prevent blog text from overflowing

--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -356,6 +356,7 @@ select {
 .article-reader {
   max-width: 768px;
   width: calc(100% - 36rem);
+  overflow-wrap: break-word;
 
   hr {
     border: none;
